[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/gui/info_panel_command_row.gd" type="Script" id=1]
[ext_resource path="res://src/gui/energy_label.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_texture_rect.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/spacer.tscn" type="PackedScene" id=4]

[node name="InfoPanelCommandRow" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 14.0
margin_bottom = 26.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ScaffolderTextureRect" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 3 )]
margin_left = 7.0
margin_right = 7.0
texture_scale = Vector2( 3, 3 )

[node name="EnergyLabel" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 14.0
margin_bottom = 26.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0
cost = -1
color = Color( 0.992157, 1, 0.439216, 1 )
font_size = "Xs"

[node name="Spacer" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 13.0
margin_right = 30.0
margin_bottom = 13.0
rect_min_size = Vector2( 16, 0 )
size = Vector2( 16, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 30.0
margin_right = 40.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_constants/separation = 0
